# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.14.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix visible output of cache methods metadata/flat, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240038

*eix-0.14.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for PROPERTIES and RESTRICT.
	- Inquire sqlite database more flexible. This should fix
	  http://bugs.gentoo.org/show_bug.cgi?id=238942
	- Fix ./configure --with-eprefix-default/--with-eix-prefix-default.
	  Thanks to Michał Bartoszkiewicz <mbartoszkiewicz@gmail.com> for
	  investigating, see http://bugs.gentoo.org/show_bug.cgi?id=235011
	- Assume SLOT="" is not ok for parse[*]|ebuild[*], see
	  http://bugs.gentoo.org/show_bug.cgi?id=238882

*eix-0.13.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix segfault in numeric comparison of 0 and number with leading 0,
	  see http://forums.gentoo.org/viewtopic-t-278819-start-375.html
	- Disable autotools maintainer mode which seems to be broken anyway.
	- Fix -u in manpage, see http://bugs.gentoo.org/show_bug.cgi?id=236036

*eix-0.13.4
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Correctly interpret package.keywords: multiple lines with same mask
	  are combined; only use default keywords if combination is empty.
	- Print warning if "source" failed.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Let eix-sync be tacit on hooks and evaluate them in current shell.
	  This makes hooks more powerful and gives the user the ability to
	  treat redirection manually to some extent, see
	  https://sourceforge.net/tracker/index.php?func=detail&aid=2042001&
	  group_id=128101&atid=710611
	- Improve calculation of times in eix-sync; avoid time command, see
	  http://bugs.gentoo.org/show_bug.cgi?id=235269
	- Introduce EIX_PREFIX to split the previous double meaning of EPREFIX,
	  see http://bugs.gentoo.org/show_bug.cgi?id=235011
	  Now EPREFIX has a meaning similar to that of prefix-portage.