@@ -58,6 +58,9 @@ enum cli_options {
 	O_SYSTEM_NONLOCAL,
 	O_UPGRADE_LOCAL,
 	O_UPGRADE_NONLOCAL,
+	O_INSTALLED_UNSTABLE,
+	O_INSTALLED_TESTING,
+	O_INSTALLED_MASKED,
 	O_OVERLAY,
 	O_ONLY_OVERLAY,
 	O_INSTALLED_OVERLAY,
